Added google scripts API integration. **Repaired env**

--- a/uniforms/pytest.ini
+++ b/uniforms/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = uniforms.settings
 python_files = test_*.py *_test.py
-addopts = --reuse-db
+addopts = --reuse-db -p no:warnings
+filterwarnings = 
+    ignore::DeprecationWarning
